// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup/> handles onChange 1`] = `
<div
  className="RadioGroupStyled-gTxwVG hBEowv"
>
  <div
    className="RadioStyled-hpxAZh bDpsJW"
  >
    <input
      checked={false}
      disabled={false}
      id="radio-0"
      onChange={[Function]}
      tabIndex="0"
      type="radio"
    />
    <label
      checked={false}
      className="RadioLabelStyled-bUjqWi jQmJto"
      disabled={false}
      htmlFor="radio-0"
    >
      value1
    </label>
  </div>
</div>
`;

exports[`<RadioGroup/> handles onChange 2`] = `
<div
  className="RadioGroupStyled-gTxwVG hBEowv"
>
  <div
    className="RadioStyled-hpxAZh bDpsJW"
  >
    <input
      checked={true}
      disabled={false}
      id="radio-0"
      onChange={[Function]}
      tabIndex="0"
      type="radio"
    />
    <label
      checked={true}
      className="RadioLabelStyled-bUjqWi eKlWYY"
      disabled={false}
      htmlFor="radio-0"
    >
      value1
    </label>
  </div>
</div>
`;

exports[`<RadioGroup/> handles props change 1`] = `
<div
  className="RadioGroupStyled-gTxwVG hBEowv"
/>
`;

exports[`<RadioGroup/> handles props change 2`] = `
<div
  className="RadioGroupStyled-gTxwVG hBEowv"
/>
`;

exports[`<RadioGroup/> renders correctly with default props 1`] = `
<div
  className="RadioGroupStyled-gTxwVG hBEowv"
/>
`;
